// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`occurrenceQuery converts time range if in filters 1`] = `
"
query Occurrence {
   OccurrenceData(skip:0, take:100, filters: {startTimestamp:1001,endTimestamp:2002}, bounds: {locationWindowActive: false})
   {
      items {
         year_start
         id
         site {
            location
         }
         sample {
            n_all
         }
         recorded_species {
            species
         }
      }
      total
      hasMore
   }
}"
`;

exports[`occurrenceQuery includes countries if in filters 1`] = `
"
query Occurrence {
   OccurrenceData(skip:0, take:100, filters: {country:[\\"Kenya\\",\\"Uganda\\"]}, bounds: {locationWindowActive: false})
   {
      items {
         year_start
         id
         site {
            location
         }
         sample {
            n_all
         }
         recorded_species {
            species
         }
      }
      total
      hasMore
   }
}"
`;

exports[`occurrenceQuery returns the correct query without any filters 1`] = `
"
query Occurrence {
   OccurrenceData(skip:0, take:100, filters: {}, bounds: {locationWindowActive: false})
   {
      items {
         year_start
         id
         site {
            location
         }
         sample {
            n_all
         }
         recorded_species {
            species
         }
      }
      total
      hasMore
   }
}"
`;

exports[`referenceQuery returns the correct query 1`] = `
"
    query Reference{
        allReferenceData(skip:10, take:50, orderBy:\\"num_id\\", order:\\"asc\\", startId: 10, endId: 100, textFilter: \\"filter\\") {
         items{author
            article_title
            journal_title
            citation
            year
            published
            report_type
            v_data
            num_id

        }
    total
    hasMore
  }

    }
"
`;

exports[`species information speciesInformationById queries with the right id 1`] = `
"
   query {
      speciesInformationById(id: \\"123-ABC\\") {
        id
        name
        shortDescription
        description
      }
    }
    "
`;

exports[`species information upsertSpeciesInformationMutation builds the correct mutation if creating 1`] = `
"
   mutation {
      createEditSpeciesInformation(input: {
         
         name: \\"test species\\"
         shortDescription: \\"short description test\\"
         description: \\"\\"\\"# full description

some content\\"\\"\\"
         speciesImage: \\"ABC123\\"
      }) {
         name
         id
         description
         shortDescription
         speciesImage
      }
   }"
`;

exports[`species information upsertSpeciesInformationMutation builds the correct mutation if editing 1`] = `
"
   mutation {
      createEditSpeciesInformation(input: {
         id: \\"12345678\\"
         name: \\"test species\\"
         shortDescription: \\"short description test\\"
         description: \\"\\"\\"# full description

some content\\"\\"\\"
         speciesImage: \\"ABC123\\"
      }) {
         name
         id
         description
         shortDescription
         speciesImage
      }
   }"
`;
